<resources>
    <string name="app_name">LoginApp</string>
    <string name="login">Login</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="get_new">Get new</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="create_new">Create new</string>
    <string name="functionality_in_development">Functionality in development</string>
</resources>